--- a/hello.html
+++ b/hello.html
@@ -1,16 +1,29 @@
 <html>
-<hear>
+<head>
+
+	<link rel="stylesheet" type="text/css" href="wizard.css">
+
+	<style src="wizard.css"></style>
 	<title>The Wizard's Tower </title>
 </head>
-<body>I love wizards
+<body><p>
+I love wizards
 wizards are real, I'm sure of it.
 I've seen a few myself.
-Here's a Haiku about wizards
-<h1>Smoke rings and fireworks
+Here's a Haiku about wizards</p>	
+
+<h1 id="thingmabob">
+Smoke rings and fireworks
 A wizard arrives just in time
 Though not sure why</h1>
-<h2> Wizards can cast spells, use forces, do magic, and hold an extreme wisdom.
+<h2 class="text2">
+Wizards can cast spells, use forces, do magic, and hold an extreme wisdom.
 	here is a cool image of a wizard. </h2>
 	<img src="wizard.jpg" style="width:400px;height:200px;">
+
+<a href="https://en.wikipedia.org/wiki/Magician_(fantasy)">wizard wiki </a>
+<button onclick="changeBackground()">change bg color</button>
+
+<script src="main.js" ></script>
 </body>	
 </html>
